@@ -87,7 +87,7 @@ export class AuthService {
   logout() {
     // Ensure we have a valid CSRF token...
     this.refreshCSRFToken();
-    return this.http.post('/api/auth/logout', {}).pipe(
+    return this.http.get('/api/user/logout', {}).pipe(
       tap(() => this.token.clear()),
       map(() => !this.check())
     );
